# LinuxKettle

./: README.md
RandomWords_GTK/: io.github.kettle3d.RandomWords.json  meson.build
RandomWords_GTK/_build/: build.ninja  compile_commands.json
RandomWords_GTK/_build/data/: io.github.kettle3d.RandomWords.appdata.xml
RandomWords_GTK/_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
RandomWords_GTK/_build/meson-logs/: install-log.txt  meson-log.txt
RandomWords_GTK/_build/src/: randomwords  randomwords-resources.c
RandomWords_GTK/_build/src/randomwords.p/: main.c  window.c
RandomWords_GTK/data/: io.github.kettle3d.RandomWords.appdata.xml.in  io.github.kettle3d.RandomWords.desktop.in  io.github.kettle3d.RandomWords.gschema.xml  meson.build
RandomWords_GTK/deploy/: Makefile  README
RandomWords_GTK/deploy/src/: Makefile  main.c  randomwords-resources.c  randomwords-resources.h  window.c
RandomWords_GTK/icons/hicolor/: index.theme
RandomWords_GTK/po/: POTFILES  meson.build
RandomWords_GTK/src/: main.vala  meson.build  randomwords.gresource.xml  window.ui  window.ui~  window.vala
RandomWords_Qt/: README.md  form.ui  main.py  main.pyproject  randomwords
RandomWords_Qt/PySide2/: designer  pyside2-lupdate  rcc  uic
RandomWords_Qt/shiboken2/docs/shiboken2/: Shiboken.qch
kettlede/: README.md  meson.build
kettlede/Applets/ClockApplet/: io.github.kettle3d.kettlede.ClockApplet.json  meson.build
kettlede/Applets/ClockApplet/data/: io.github.kettle3d.kettlede.ClockApplet.appdata.xml.in  io.github.kettle3d.kettlede.ClockApplet.desktop.in  io.github.kettle3d.kettlede.ClockApplet.gschema.xml  meson.build
kettlede/Applets/ClockApplet/src/: clock.vala  clockapplet.gresource.xml  main.vala  meson.build  window.ui  window.ui~  window.vala
kettlede/Applets/PowerApplet/: meson.build
kettlede/Applets/PowerApplet/src/: battery.vala  main.vala  meson.build  powerapplet.gresource.xml  window.ui  window.ui~  window.vala
kettlede/Applets/SystemApplet/: io.github.kettle3d.kettlede.SystemApplet.json  meson.build
kettlede/Applets/SystemApplet/src/: main.vala  meson.build  session.vala  systemapplet.gresource.xml  window.ui  window.vala
kettlede/SessionManager/: session.py
kettlede/data/: io.github.kettle3d.KettleDE.appdata.xml.in  io.github.kettle3d.KettleDE.desktop.in  io.github.kettle3d.KettleDE.gschema.xml  meson.build
kettlede/po/: POTFILES  meson.build
kettlede/src/: kettlede.gresource.xml  main.vala  meson.build  window.ui  window.ui~  window.vala
loading/: README.md  io.github.kettle3d.Loader.json  meson.build
loading/data/: io.github.kettle3d.Loader.appdata.xml.in  io.github.kettle3d.Loader.desktop.in  io.github.kettle3d.Loader.gschema.xml  meson.build
loading/po/: POTFILES  meson.build
loading/src/: loading-window.c  loading-window.h  loading-window.ui  loading-window.ui~  loading.gresource.xml  main.c  meson.build
sentencemaker/: README.md  box  sentences.py  wikipedia
(+37 files in other folders)
